add images as a background

--- a/toDo_list.html
+++ b/toDo_list.html
@@ -6,6 +6,8 @@
 		<title>My toDo List</title>
 	</head>
 	<body>
+		<div id="leftFlower">
+			<img src="flower_left.png"></div>
 		<div id = "wrap">
 			<div id="name">Tanya's ToDo List</div>
 			<div id="formochka">
@@ -19,5 +21,7 @@
 				<img src="close.png" class="kartynka">
 			</div>
 		</div>
+		<div id="rightFlower">
+			<img src="flower_right.png"></div>
 	</body>
 </html>
