--- a/toDo_list.html
+++ b/toDo_list.html
@@ -6,22 +6,14 @@
 		<title>My toDo List</title>
 	</head>
 	<body>
-		<div id="leftFlower">
-			<img src="flower_left.png"></div>
-		<div id = "wrap">
+			<div id = "wrap">
 			<div id="name">Tanya's ToDo List</div>
 			<div id="formochka">
-				<form action="" name="toDo_List">
-					<input type="text" id="answer" value="">
+				<!-- <form action="" name="toDo_List"> -->
+					<input type="text" id="answer" value="" onkeyup="pressEnter(event);">
 					<input type="button" id="knopka" value="Add" onclick="addText();">
-				</form>
+				<!--</form> -->
 			</div>
-			<div class="newText">
-				Тестовий пунк у списку
-				<img src="close.png" class="kartynka">
 			</div>
-		</div>
-		<div id="rightFlower">
-			<img src="flower_right.png"></div>
 	</body>
 </html>
